# sydweather-utils

./: README.md  pyproject.toml
src/sydweather_utils/: __init__.py  core.py
src/sydweather_utils.egg-info/: PKG-INFO  SOURCES.txt
