[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sydweather-utils"
version = "0.1.0"
description = "Two tiny helpers for Sydney weather ML: feature building + time split."
readme = "README.md"
authors = [{name = "Mario Rubiano", email = "marubianor@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
